--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "docs": "jsdoc  src src/README.md -u tutorials  -d docs"
+    "docs": "jsdoc  src -r src/README.md -u tutorials  -d docs"
   },
   "repository": {
     "type": "git",
