--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "timejs",
   "version": "1.0.0",
   "description": "This Is My Engine in JavaScript",
-  "main": "index.js",
+  "main": "electron.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "electron": "webpack --target electron-renderer && electron .",
     "docs": "jsdoc  src -r src/README.md -u tutorials  -d docs"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "electron": "^3.0.6",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-google": "^0.10.0",
