--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "electron": "webpack --target electron-renderer && electron .",
+    "electron": "webpack --mode production --target electron-renderer && electron .",
+    "dist": "webpack --mode production --target electron-renderer &&  electron-packager .  TimejsDemo --overwrite --platform=win32 --arch=x64 --icon=icon.ico --prune=true --asar --out=build",
     "docs": "jsdoc  src -r src/README.md -u tutorials  -d docs"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "electron": "^3.0.6",
+    "electron-packager": "^12.2.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-google": "^0.10.0",
